2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkiconview.xml: Update with 2.12 API.

2007-07-30  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-pygtkgenerictreemodel.xml: Document new create_tree_iter()
	and get_user_data().

2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkicontheme.xml: Update with 2.12 API.

2007-07-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmenuitem.xml
	* pygtk-gtkcombobox.xml
	* pygtk-gtkentrycompletion.xml
	* pygtk-gtkentry.xml
	* pygtk-gtkcellrendererprogress.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcelllayout.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkaction.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkaboutdialog.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkscalebutton.xml:
	* pygtk-gtk-classes.xml: Add new gtk.ScaleButton() docs.

2007-07-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbuildable.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Buildable() docs.

	* pygtk-gtkbuilder.xml: Add note "new 2.12 method"

2007-07-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbuilder.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Builder() docs.

2007-07-13  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktreeview.xml:
	(gtk_tree_view_convert_widget_to_bin_window_coords)
	(gtk_tree_view_convert_widget_to_tree_coords)
	(gtk_tree_view_convert_tree_to_bin_window_coords)
	(gtk_tree_view_convert_tree_to_widget_coords)
	(gtk_tree_view_convert_bin_window_to_tree_coords)
	(gtk_tree_view_convert_bin_window_to_widget_coords): Add.

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcontainer.xml: Make a separate section for class methods,
	fix child property as write only. Fix bug #370936

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>
