@@ -179,6 +179,7 @@
   <xi:include href="pygtk-gtkuimanager.xml"/>
   <xi:include href="pygtk-gtkvbox.xml"/>
   <xi:include href="pygtk-gtkvbuttonbox.xml"/>
+  <xi:include href="pygtk-gtkvolumebutton.xml"/>
   <xi:include href="pygtk-gtkvpaned.xml"/>
   <xi:include href="pygtk-gtkvruler.xml"/>
   <xi:include href="pygtk-gtkvscale.xml"/>
