@@ -1,0 +1,102 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<refentry id="class-gtkvolumebutton">
+    <refnamediv>
+        <refname>gtk.VolumeButton</refname>
+        <refpurpose>A button which pops up a volume control (new in PyGTK 2.12)</refpurpose>
+    </refnamediv>
+
+    <refsect1>
+        <title>Synopsis</title>
+
+    <classsynopsis language="python">
+        <ooclass><classname>gtk.VolumeButton</classname></ooclass>
+        <ooclass><classname><link linkend="class-gtkscalebutton">gtk.ScaleButton</link></classname></ooclass>
+    <constructorsynopsis language="python">
+        <methodname><link linkend="constructor-gtkvolumebutton">gtk.VolumeButton</link></methodname>
+        <methodparam></methodparam>
+    </constructorsynopsis>
+
+    </classsynopsis>
+    </refsect1>
+
+    <refsect1>
+        <title>Ancestry</title>
+
+<synopsis>+-- <link linkend="class-gobject">gobject.GObject</link>
+  +-- <link linkend="class-gtkobject">gtk.Object</link>
+    +-- <link linkend="class-gtkwidget">gtk.Widget</link>
+      +-- <link linkend="class-gtkcontainer">gtk.Container</link>
+        +-- <link linkend="class-gtkbin">gtk.Bin</link>
+          +-- <link linkend="class-gtkbutton">gtk.Button</link>
+            +-- <link linkend="class-gtkscalebutton">gtk.ScaleButton</link>
+              +-- <link linkend="class-gtkvolumebutton">gtk.VolumeButton</link>
+</synopsis>
+
+    </refsect1>
+
+    <refsect1 id="properties-gtkvolumebutton">
+        <title>gtk.VolumeButton Properties</title>
+    
+        <para><link linkend="properties-gtkobject">gtk.Object Properties</link></para>
+        <para><link linkend="properties-gtkwidget">gtk.Widget Properties</link></para>
+        <para><link linkend="properties-gtkcontainer">gtk.Container Properties</link></para>
+        <para><link linkend="properties-gtkbutton">gtk.Button Properties</link></para>
+        <para><link linkend="properties-gtkscalebutton">gtk.ScaleButton Properties</link></para>
+    </refsect1>
+
+    <refsect1 id="style-properties-gtkscalebutton">
+        <title>gtk.VolumeButton Style Properties</title>
+
+        <para><link linkend="style-properties-gtkwidget">gtk.Widget Style Properties</link></para>
+        <para><link linkend="style-properties-gtkbutton">gtk.Button Style Properties</link></para>
+
+    </refsect1>
+    
+    <refsect1 id="signal-prototypes-gtkscalebutton">
+        <title>gtk.VolumeButton Signal Prototypes</title>
+
+        <para><link linkend="signal-prototypes-gobject">gobject.GObject Signal Prototypes</link></para>
+        <para><link linkend="signal-prototypes-gtkobject">gtk.Object Signal Prototypes</link></para>
+        <para><link linkend="signal-prototypes-gtkwidget">gtk.Widget Signal Prototypes</link></para>
+        <para><link linkend="signal-prototypes-gtkcontainer">gtk.Container Signal Prototypes</link></para>
+        <para><link linkend="signal-prototypes-gtkbutton">gtk.Button Signal Prototypes</link></para>
+        <para><link linkend="signal-prototypes-gtkscalebutton">gtk.ScaleButton Signal Prototypes</link></para>
+    </refsect1>
+
+    <refsect1>
+        <title>Description</title>
+            <para>
+                <link linkend="class-gtkvolumebutton"><classname>gtk.VolumeButton</classname></link>
+                is a subclass of
+                <link linkend="class-gtkscalebutton"><classname>gtk.ScaleButton</classname></link>
+                that has been tailored for use as a volume control widget with suitable icons,
+                tooltips and accessible labels.
+            </para>
+    </refsect1>
+
+    <refsect1 id="constructor-gtkvolumebutton">
+        <title>Constructor</title>
+
+        <programlisting><constructorsynopsis language="python">
+            <methodname>gtk.VolumeButton</methodname>
+            <methodparam></methodparam>
+        </constructorsynopsis></programlisting>
+
+        <variablelist>
+        </variablelist>
+
+        <note>
+            <para>This constructor is available in PyGTK 2.12 and above.</para>
+        </note>
+
+        <para>
+            Creates a <link linkend="class-gtkvolumebutton"><classname>gtk.VolumeButton</classname></link>,
+            with a range between 0 and 100, with a stepping of 2. Volume values can be obtained and
+            modified using the functions from
+            <link linkend="class-gtkscalebutton"><classname>gtk.ScaleButton</classname></link>
+        </para>
+    </refsect1>
+</refentry>
