@@ -1,4 +1,9 @@
-2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>
+2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* pygtk-gtkvolumebutton.xml:
+	* pygtk-gtk-classes.xml: Add new gtk.VolumeButton() docs.
+
+2007-08-04  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkiconview.xml: Update with 2.12 API.
 
